[gd_scene load_steps=18 format=3 uid="uid://bstec2h8bkd4h"]

[ext_resource type="Script" uid="uid://blbrcu0mnbf1m" path="res://scenes/NPCs/bearded_man.gd" id="1_76h8k"]
[ext_resource type="Texture2D" uid="uid://bv3jyfwuh0rvc" path="res://scenes/NPCs/bearded-idle.png" id="2_xt067"]
[ext_resource type="Texture2D" uid="uid://d0w3fnl5c5bqa" path="res://scenes/NPCs/bearded-walk.png" id="3_63sq3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eq7kl"]
atlas = ExtResource("2_xt067")
region = Rect2(0, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkixs"]
atlas = ExtResource("2_xt067")
region = Rect2(40, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kslo"]
atlas = ExtResource("2_xt067")
region = Rect2(80, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecndb"]
atlas = ExtResource("2_xt067")
region = Rect2(120, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_y51j4"]
atlas = ExtResource("2_xt067")
region = Rect2(160, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve581"]
atlas = ExtResource("3_63sq3")
region = Rect2(0, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_eweql"]
atlas = ExtResource("3_63sq3")
region = Rect2(40, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1cce"]
atlas = ExtResource("3_63sq3")
region = Rect2(80, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5fwc"]
atlas = ExtResource("3_63sq3")
region = Rect2(120, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_38bdw"]
atlas = ExtResource("3_63sq3")
region = Rect2(160, 0, 40, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_k417i"]
atlas = ExtResource("3_63sq3")
region = Rect2(200, 0, 40, 47)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ha07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq7kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkixs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kslo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecndb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y51j4")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve581")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eweql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1cce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5fwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38bdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k417i")
}],
"loop": false,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dpyyi"]
radius = 14.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_76h8k"]
radius = 71.1758

[node name="BeardedMan" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 3
script = ExtResource("1_76h8k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1ha07")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dpyyi")

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 3

[node name="CollisionDetect" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_76h8k")
debug_color = Color(0.575612, 0.552428, 0.102289, 0.42)

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
